--- a/config/locales/messages.pt-BR.yml
+++ b/config/locales/messages.pt-BR.yml
@@ -13,3 +13,5 @@
     destroyed: Item excluído com sucesso!
     destroyed_with: "%{item} foi excluído com sucesso!"
     not_authorized: Você não está autorizado a executar essa ação.
+    email_delivered: Email enviado com sucesso!
+    email_not_delivered: Erro ao enviar email. Tente novamente
