--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,14 @@
-== README
+# BatterApp
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+##Application developed in Ruby 2.3.1 with Rails 4.2.5
 
-Things you may want to cover:
+###Sale of used products. (This application was developed with Udemy class, teacher Jackson Pires)
 
-* Ruby version
+##Dependencies:
 
-* System dependencies
+* ImageMagick (https://www.imagemagick.org)
 
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+'''
+sudo apt-get update
+sudo apt-get install imagemagick
+'''
